Modify 'emails/requestPasswordReset.handlebars' config to Chinese
Change Email content to Chinese
The following file has been modified:
    modified:   api/server/utils/emails/inviteUser.handlebars
    modified:   api/server/utils/emails/passwordReset.handlebars
    modified:   api/server/utils/emails/verifyEmail.handlebars

--- a/api/server/utils/emails/inviteUser.handlebars
+++ b/api/server/utils/emails/inviteUser.handlebars
@@ -96,7 +96,7 @@
                                   style='margin: 0px; line-height: 140%; text-align: left; word-wrap: break-word; font-size: 22px; font-weight: 700;'
                                 >
                                   <div>
-                                    <div>You have been invited to join {{appName}}!</div>
+                                    <div>你已被邀请加入 {{appName}}！</div>
                                     </div>
                                   </div>
                                 </h1>
@@ -122,7 +122,7 @@
                                 <div
                                   style='font-size: 14px; line-height: 140%; text-align: left; word-wrap: break-word;'
                                 >
-                                  <div>Hi,</div>
+                                  <div>你好，</div>
                                 </div>
                               </td>
                             </tr>
@@ -206,7 +206,7 @@
                                 >
                                   <div>
                                    <div>
-                                      Hurry up, the invite will expiry in 7 days
+                                      请抓紧时间，邀请将在7天后到期
                                     </div>
                                   </div>
                                 </div>
@@ -231,8 +231,8 @@
                                 <div
                                   style='font-size: 14px; line-height: 140%; text-align: left; word-wrap: break-word;'
                                 >
-                                  <div>Best regards,</div>
-                                  <div>The {{appName}} Team</div>
+                                  <div>最诚挚的问候</div>
+                                  <div>The {{appName}}</div>
                                 </div>
                               </td>
                             </tr>
