--- a/api/server/utils/emails/passwordReset.handlebars
+++ b/api/server/utils/emails/passwordReset.handlebars
@@ -92,7 +92,7 @@
                                 <div
                                   style='font-size: 14px; line-height: 140%; text-align: left; word-wrap: break-word;'
                                 >
-                                  <div>Hi {{name}},</div>
+                                  <div>你好 {{name}}，</div>
                                 </div>
                               </td>
                             </tr>
@@ -116,7 +116,7 @@
                                   style='font-size: 14px; line-height: 140%; text-align: left; word-wrap: break-word;'
                                 >
                                   <div>
-                                    <div>Your password has been updated successfully! </div>
+                                    <div>你的密码已重置成功！ </div>
                                   </div>
                                 </div>
                               </td>
@@ -140,8 +140,8 @@
                                 <div
                                   style='font-size: 14px; line-height: 140%; text-align: left; word-wrap: break-word;'
                                 >
-                                  <div>Best regards,</div>
-                                  <div>The {{appName}} Team</div>
+                                  <div>最诚挚的问候</div>
+                                  <div>The {{appName}}</div>
                                 </div>
                               </td>
                             </tr>
